mongodb-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: mongodb-pod
  labels:
    app: mongodb

spec:
  containers:
  - name: mongodb-container
    image: mongo
    ports:
    - containerPort: 27017
