multi-cont-one-manifest.yaml
apiVersion: v1
kind: Pod

metadata:
  name: ajith-pod

spec:
  containers:

  - name: fitness-container
    image: dalalappagariajithkumar/fitness-app:latest
    ports:
    - containerPort: 5000

  - name: ecommerce-container
    image: dalalappagariajithkumar/ecommerce-app:latest
    ports:
    - containerPort: 3000
