pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ajith-pod

spec:
  containers:
  - name: veg-container
    image: dalalappagariajithkumar/vegetable-app:latest
    ports:
    - containerPort: 3000
