cluster-ip.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: nginx-service

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fitness-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fitness

  template:
    metadata:
      labels:
        app: fitness

    spec:
      containers:
      - name: fitness-container
        image: dalalappagariajithkumar/fitness-app:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service

metadata:
  name: fitness-service

spec:
  type: ClusterIP

  selector:
    app: fitness

  ports:
  - port: 5000
    targetPort: 5000
