gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: vegetable-gateway

spec:
  gatewayClassName: kgateway

  listeners:
  - name: http
    protocol: HTTP
    port: 80
