ghee-config.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb-container
        image: mongo

        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017

  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ghee-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ghee

  template:
    metadata:
      labels:
        app: ghee

    spec:
      containers:
      - name: ghee-container
        image: dalalappagariajithkumar/ghee-app:latest

        ports:
        - containerPort: 5656
---
apiVersion: v1
kind: Service

metadata:
  name: ghee-service

spec:
  selector:
    app: ghee

  ports:
  - port: 80
    targetPort: 5656

  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ghee-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: ghee-service

            port:
              number: 80
